frontend/test/should_fail/computations_no_procmethod2.grg
using computations_no_procmethod;

test bar()
{
	def var x:int;

	n:NO;
	
	optional {
		yield {
			(yield x) = n.no();
		}
	}
}
